compiler/testData/cli/js/compilationErrorConstDivByZero.kt
const val inf = 1 / 0
